Update Dashboard and Services List

--- a/dashboad.html
+++ b/dashboad.html
@@ -95,46 +95,237 @@
             </div>
 
             <div class="col-12 col-lg-10 shadow py-3">
+                <h1 class="section-title-side"><span>Translation</span></h1>
+                <div class="row mb-4">
+                    <div class="col-12 col-md-4 col-lg-3 mb-4">
+                        <div class="card  h-100 ">
+                            <a href="select_service_mode.html" class="card-body card-hover text-dark">
+                                <h5 class="card-title font-weight-bold d-flex flex-row align-items-center"><i
+                                        class="fas fa-chevron-circle-right fa-3x my-3 mr-2"></i>Medical </h5>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-4 col-lg-3 mb-4">
+                        <div class="card  h-100 ">
+                            <a href="select_service_mode.html" class="card-body card-hover text-dark">
+                                <h5 class="card-title font-weight-bold d-flex flex-row align-items-center"><i
+                                        class="fas fa-chevron-circle-right fa-3x my-3 mr-2"></i>Legal </h5>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-4 col-lg-3 mb-4">
+                        <div class="card  h-100 ">
+                            <a href="select_service_mode.html" class="card-body card-hover text-dark">
+                                <h5 class="card-title font-weight-bold d-flex flex-row align-items-center"><i
+                                        class="fas fa-chevron-circle-right fa-3x my-3 mr-2"></i>Financial </h5>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-4 col-lg-3 mb-4">
+                        <div class="card  h-100 ">
+                            <a href="select_service_mode.html" class="card-body card-hover text-dark">
+                                <h5 class="card-title font-weight-bold d-flex flex-row align-items-center"><i
+                                        class="fas fa-chevron-circle-right fa-3x my-3 mr-2"></i>Subtitling </h5>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-4 col-lg-3 mb-4">
+                        <div class="card  h-100 ">
+                            <div class="card-body card-hover text-dark">
+                                <h5 class="card-title font-weight-bold d-flex flex-row align-items-center"><i
+                                        class="fas fa-chevron-circle-right fa-3x my-3 mr-2"></i>Website localisation
+                                </h5>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-4 col-lg-3 mb-4">
+                        <div class="card  h-100 ">
+                            <div class="card-body card-hover text-dark">
+                                <h5 class="card-title font-weight-bold d-flex flex-row align-items-center"><i
+                                        class="fas fa-chevron-circle-right fa-3x my-3 mr-2"></i>Interpretation </h5>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-4 col-lg-3 mb-4">
+                        <div class="card  h-100 ">
+                            <div class="card-body card-hover text-dark">
+                                <h5 class="card-title font-weight-bold d-flex flex-row align-items-center"><i
+                                        class="fas fa-chevron-circle-right fa-3x my-3 mr-2"></i>Scientific </h5>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-4 col-lg-3 mb-4">
+                        <div class="card  h-100 ">
+                            <div class="card-body card-hover text-dark">
+                                <h5 class="card-title font-weight-bold d-flex flex-row align-items-center"><i
+                                        class="fas fa-chevron-circle-right fa-3x my-3 mr-2"></i>Other </h5>
+                            </div>
+                        </div>
+                    </div>
+                </div>
                 <h1 class="section-title-side"><span>Place order now</span></h1>
 
                 <div class="row mb-5 card-deck">
-                    <!-- <div class="col-12 col-lg-4"> -->
-                    <div class="card rounded-lg">
-                        <div class="card-body pb-0">
-                            <h5 class="card-title font-weight-bold">All Services</h5>
-                            <p class="card-text">You will see list of all services actigorized by the service
-                                type </p>
-                        </div>
-                        <div class="card-footer bg-white border-0">
-                            <a href="/services.html" class="btn nz-btn-gold text-uppercase font-weight-bold">Go
-                                To
-                                Services List</a>
-                        </div>
-                    </div>
-
-                    <div class="card rounded-lg">
-                        <div class="card-body pb-0">
-                            <h5 class="card-title font-weight-bold">Easy Mode</h5>
-                            <p class="card-text">Just pick your service, upload the needed documents and we will
-                                call you later to complete the process </p>
-                        </div>
-                        <div class="card-footer bg-white border-0">
-                            <a href="/services.html" class="btn nz-btn-gold text-uppercase font-weight-bold">Place order
-                                now</a>
+                    <div class="col-12 col-lg-3">
+                        <div class="card w-100 rounded-lg">
+                            <div class="card-body pb-0">
+                                <h5 class="card-title font-weight-bold">All Services</h5>
+                            </div>
+                            <div class="card-footer bg-white border-0">
+                                <a href="/services.html" class="btn nz-btn-gold text-uppercase font-weight-bold">Go
+                                    To
+                                    Services List</a>
+                            </div>
                         </div>
                     </div>
 
-                    <div class="card rounded-lg">
-                        <div class="card-body pb-0">
-                            <h5 class="card-title font-weight-bold">Advanced Mode</h5>
-                            <p class="card-text">If you have time, Follow few simple steps to customize you
-                                order</p>
-                        </div>
-                        <div class="card-footer bg-white border-0">
-                            <a href="/services.html" class="btn nz-btn-gold text-uppercase font-weight-bold">Place order
-                                now</a>
+                    <div class="col-12 col-lg-3">
+                        <div class="card w-100 rounded-lg">
+                            <div class="card-body pb-0">
+                                <!-- <h5 class="card-title font-weight-bold">Document Clearance</h5> -->
+                                <h5 class="card-title font-weight-bold collapsed d-flex justify-content-between"
+                                    data-toggle="collapse" href="#collapseOne" role="button" aria-expanded="false"
+                                    aria-controls="collapseOne">Document Clearance <i class="fas fa-info-circle"></i>
+                                </h5>
+                                <ul class="list-group list-group-flush collapse" id="collapseOne">
+                                    <a href="select_service_mode.html"
+                                        class="list-group-item text-dark text-decoration-none">
+                                        <i class="fas fa-chevron-circle-right my-3 mr-2"></i>
+                                        Pro</a>
+                                    <a href="select_service_mode.html"
+                                        class="list-group-item text-dark text-decoration-none">
+                                        <i class="fas fa-chevron-circle-right my-3 mr-2"></i>
+                                        Company Setup and
+                                        Formation</a>
+                                    <a href="select_service_mode.html"
+                                        class="list-group-item text-dark text-decoration-none">
+                                        <i class="fas fa-chevron-circle-right my-3 mr-2"></i>
+                                        Attestation and
+                                        Certification\r\n</a>
+                                    <a href="select_service_mode.html"
+                                        class="list-group-item text-dark text-decoration-none">
+                                        <i class="fas fa-chevron-circle-right my-3 mr-2"></i>
+                                        Registration for Patent,
+                                        Copyright And Trademark</a>
+                                    <a href="select_service_mode.html"
+                                        class="list-group-item text-dark text-decoration-none">
+                                        <i class="fas fa-chevron-circle-right my-3 mr-2"></i>
+                                        Product Registration</a>
+                                    <a href="select_service_mode.html"
+                                        class="list-group-item text-dark text-decoration-none">
+                                        <i class="fas fa-chevron-circle-right my-3 mr-2"></i>
+                                        Other </a>
+                                </ul>
+                            </div>
+                            <div class="card-footer bg-white border-0">
+                                <a class="btn nz-btn-gold text-uppercase font-weight-bold" data-toggle="collapse"
+                                    href="#collapseOne" role="button" aria-expanded="false"
+                                    aria-controls="collapseOne">Place order
+                                    now</a>
+                            </div>
                         </div>
                     </div>
+
+                    <div class="col-12 col-lg-3">
+                        <div class="card w-100 rounded-lg">
+                            <div class="card-body pb-0">
+                                <h5 class="card-title font-weight-bold collapsed d-flex justify-content-between"
+                                    data-toggle="collapse" href="#collapseTwo" role="button" aria-expanded="false"
+                                    aria-controls="collapseTwo">Legal Advice <i class="fas fa-info-circle"></i></h5>
+                                <ul class="list-group list-group-flush collapse" id="collapseTwo">
+                                    <a href="select_service_mode.html"
+                                        class="list-group-item text-dark text-decoration-none">
+                                        <i class="fas fa-chevron-circle-right my-3 mr-2"></i>
+                                        Commercial and Corporate
+                                        low</a>
+                                    <a href="select_service_mode.html"
+                                        class="list-group-item text-dark text-decoration-none">
+                                        <i class="fas fa-chevron-circle-right my-3 mr-2"></i>
+                                        Company incorporation</a>
+                                    <a href="select_service_mode.html"
+                                        class="list-group-item text-dark text-decoration-none">
+                                        <i class="fas fa-chevron-circle-right my-3 mr-2"></i>
+                                        Dispute resolution</a>
+                                    <a href="select_service_mode.html"
+                                        class="list-group-item text-dark text-decoration-none">
+                                        <i class="fas fa-chevron-circle-right my-3 mr-2"></i>
+                                        Immigration and
+                                        citizenship</a>
+                                    <a href="select_service_mode.html"
+                                        class="list-group-item text-dark text-decoration-none">
+                                        <i class="fas fa-chevron-circle-right my-3 mr-2"></i>
+                                        Intellectual property
+                                        low</a>
+                                    <a href="select_service_mode.html"
+                                        class="list-group-item text-dark text-decoration-none">
+                                        <i class="fas fa-chevron-circle-right my-3 mr-2"></i>
+                                        Real estate and property
+                                        low</a>
+                                    <a href="select_service_mode.html"
+                                        class="list-group-item text-dark text-decoration-none">
+                                        <i class="fas fa-chevron-circle-right my-3 mr-2"></i>
+                                        Arbitration low</a>
+                                    <a href="select_service_mode.html"
+                                        class="list-group-item text-dark text-decoration-none">
+                                        <i class="fas fa-chevron-circle-right my-3 mr-2"></i>
+                                        Other</a>
+                                </ul>
+                            </div>
+                            <div class="card-footer bg-white border-0">
+                                <a class="btn nz-btn-gold text-uppercase font-weight-bold" data-toggle="collapse"
+                                    href="#collapseTwo" role="button" aria-expanded="false"
+                                    aria-controls="collapseTwo">Place order
+                                    now</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-12 col-lg-3">
+                        <div class="card w-100 rounded-lg">
+                            <div class="card-body pb-0">
+                                <h5 class="card-title font-weight-bold collapsed d-flex justify-content-between"
+                                    data-toggle="collapse" href="#collapseThree" role="button" aria-expanded="false"
+                                    aria-controls="collapseThree">SME Services <i class="fas fa-info-circle"></i></h5>
+                                <ul class="list-group list-group-flush collapse" id="collapseThree">
+                                    <a href="select_service_mode.html"
+                                        class="list-group-item text-dark text-decoration-none">
+                                        <i class="fas fa-chevron-circle-right my-3 mr-2"></i>
+                                        Outsourcing</a>
+                                    <a href="select_service_mode.html"
+                                        class="list-group-item text-dark text-decoration-none">
+                                        <i class="fas fa-chevron-circle-right my-3 mr-2"></i>
+                                        VAT registration</a>
+                                    <a href="select_service_mode.html"
+                                        class="list-group-item text-dark text-decoration-none">
+                                        <i class="fas fa-chevron-circle-right my-3 mr-2"></i>
+                                        SME Setup</a>
+                                    <a href="select_service_mode.html"
+                                        class="list-group-item text-dark text-decoration-none">
+                                        <i class="fas fa-chevron-circle-right my-3 mr-2"></i>
+                                        Business accounting</a>
+                                    <a href="select_service_mode.html"
+                                        class="list-group-item text-dark text-decoration-none">
+                                        <i class="fas fa-chevron-circle-right my-3 mr-2"></i>
+                                        Website/app creation</a>
+                                    <a href="select_service_mode.html"
+                                        class="list-group-item text-dark text-decoration-none">
+                                        <i class="fas fa-chevron-circle-right my-3 mr-2"></i>
+                                        PRO</a>
+                                    <a href="select_service_mode.html"
+                                        class="list-group-item text-dark text-decoration-none">
+                                        <i class="fas fa-chevron-circle-right my-3 mr-2"></i>
+                                        Other</a>
+                                </ul>
+                            </div>
+                            <div class="card-footer bg-white border-0">
+                                <a class="btn nz-btn-gold text-uppercase font-weight-bold" data-toggle="collapse"
+                                    href="#collapseThree" role="button" aria-expanded="false"
+                                    aria-controls="collapseThree">Place order
+                                    now</a>
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
 
                 <div class="row mb-5">
