add more data in order row

--- a/select_service_mode.html
+++ b/select_service_mode.html
@@ -98,23 +98,28 @@
                 <div class="row mb-5 card-deck">
                     <div class="card rounded-lg">
                         <div class="card-body pb-0">
-                            <h5 class="card-title font-weight-bold d-flex align-items-center"><i class="fas fa-space-shuttle fa-3x mr-3"></i> Easy Mode</h5>
-                            <p class="card-text">Just pick your service, upload the needed documents and we will
-                                call you later to complete the process </p>
+                            <h5 class="card-title font-weight-bold d-flex align-items-center"><i
+                                    class="fas fa-space-shuttle fa-3x mr-3"></i> Easy Mode</h5>
+                            <p class="card-text">Just pick your service, <span class="nz-pill-gold"> upload your
+                                    document and we will call </span> you later to complete the process </p>
                         </div>
                         <div class="card-footer bg-white border-0">
-                            <a href="/onestepmode.html" class="btn nz-btn-gold text-uppercase font-weight-bold">Start Now</a>
+                            <a href="/onestepmode.html" class="btn nz-btn-gold text-uppercase font-weight-bold">Start
+                                Now</a>
                         </div>
                     </div>
 
                     <div class="card rounded-lg">
                         <div class="card-body pb-0">
-                            <h5 class="card-title font-weight-bold d-flex align-items-center"><i class="fas fa-hat-wizard fa-3x mr-3"></i> Advanced Mode</h5>
-                            <p class="card-text">If you have time, Follow few simple steps to customize you
+                            <h5 class="card-title font-weight-bold d-flex align-items-center"><i
+                                    class="fas fa-hat-wizard fa-3x mr-3"></i> Advanced Mode</h5>
+                            <p class="card-text">If you have time, Follow few simple steps to <span
+                                    class="nz-pill-gold">customize</span> you
                                 order</p>
                         </div>
                         <div class="card-footer bg-white border-0">
-                            <a href="/multistepmode.html" class="btn nz-btn-gold text-uppercase font-weight-bold">Start Now</a>
+                            <a href="/multistepmode.html" class="btn nz-btn-gold text-uppercase font-weight-bold">Start
+                                Now</a>
                         </div>
                     </div>
                 </div>
