--- a/dashboad.html
+++ b/dashboad.html
@@ -95,7 +95,7 @@
             </div>
 
             <div class="col-12 col-lg-10 shadow py-3">
-                <h1 class="section-title-side"><span>Translation</span></h1>
+                <h1 class="section-title-side"><span>Translate Now</span></h1>
                 <div class="row mb-4">
                     <div class="col-12 col-md-4 col-lg-3 mb-4">
                         <div class="card  h-100 ">
