--- a/orders.html
+++ b/orders.html
@@ -96,11 +96,51 @@
             <div class="col-12 col-lg-10 shadow py-3">
                 <h1 class="section-title-side"><span>Orders List</span></h1>
                 <ul class="list-group">
-                    <li class="list-group-item order-card my-2"> <a href="/orderDetails.html" class="py-3 d-flex flex-column flex-sm-column flex-md-row justify-content-between align-items-center text-dark"><span class="align-self-start font-weight-bold"><i class="fas fa-chevron-circle-right mr-2"></i>#78476347932</span><span>Translation (Arabic to Danish)</span><span class=" badge badge-pill badge-success align-self-end">Completed</span></a></li>
-                    <li class="list-group-item order-card my-2"> <a href="/orderDetails.html" class="py-3 d-flex flex-column flex-sm-column flex-md-row justify-content-between align-items-center text-dark"><span class="align-self-start font-weight-bold"><i class="fas fa-chevron-circle-right mr-2"></i>#78476347932</span><span>Translation (Arabic to Danish)</span><span class=" badge badge-pill badge-success align-self-end">Completed</span></a></li>
-                    <li class="list-group-item order-card my-2"> <a href="/orderDetails.html" class="py-3 d-flex flex-column flex-sm-column flex-md-row justify-content-between align-items-center text-dark"><span class="align-self-start font-weight-bold"><i class="fas fa-chevron-circle-right mr-2"></i>#78476347932</span><span>Translation (Arabic to Danish)</span><span class=" badge badge-pill badge-success align-self-end">Completed</span></a></li>
-                    <li class="list-group-item order-card my-2"> <a href="/orderDetails.html" class="py-3 d-flex flex-column flex-sm-column flex-md-row justify-content-between align-items-center text-dark"><span class="align-self-start font-weight-bold"><i class="fas fa-chevron-circle-right mr-2"></i>#78476347932</span><span>Translation (Arabic to Danish)</span><span class=" badge badge-pill badge-success align-self-end">Completed</span></a></li>
-                    <li class="list-group-item order-card my-2"> <a href="/orderDetails.html" class="py-3 d-flex flex-column flex-sm-column flex-md-row justify-content-between align-items-center text-dark"><span class="align-self-start font-weight-bold"><i class="fas fa-chevron-circle-right mr-2"></i>#78476347932</span><span>Translation (Arabic to Danish)</span><span class=" badge badge-pill badge-success align-self-end">Completed</span></a></li>
+                    <li class="list-group-item order-card my-2"> <a href="/orderDetails.html"
+                            class="py-3 d-flex flex-column flex-sm-column flex-md-row justify-content-between align-items-center text-dark text-decoration-none"><span
+                                class="align-self-start font-weight-bold"><i
+                                    class="fas fa-chevron-circle-right mr-2"></i>#78476347932</span>
+                            <span>Legal Translation</span>
+                            <span>Arabic => German</span>
+                            <span>300 USD</span>
+                            <span>8/21/2019 11:53:36 AM</span>
+                            <span class=" badge badge-pill badge-success align-self-end">Completed</span></a></li>
+                    <li class="list-group-item order-card my-2"> <a href="/orderDetails.html"
+                            class="py-3 d-flex flex-column flex-sm-column flex-md-row justify-content-between align-items-center text-dark text-decoration-none"><span
+                                class="align-self-start font-weight-bold"><i
+                                    class="fas fa-chevron-circle-right mr-2"></i>#78476347932</span>
+                            <span>Legal Translation</span>
+                            <span>Arabic => German</span>
+                            <span>300 USD</span>
+                            <span>8/21/2019 11:53:36 AM</span>
+                            <span class=" badge badge-pill badge-success align-self-end">Completed</span></a></li>
+                    <li class="list-group-item order-card my-2"> <a href="/orderDetails.html"
+                            class="py-3 d-flex flex-column flex-sm-column flex-md-row justify-content-between align-items-center text-dark text-decoration-none"><span
+                                class="align-self-start font-weight-bold"><i
+                                    class="fas fa-chevron-circle-right mr-2"></i>#78476347932</span>
+                            <span>Legal Translation</span>
+                            <span>Arabic => German</span>
+                            <span>300 USD</span>
+                            <span>8/21/2019 11:53:36 AM</span>
+                            <span class=" badge badge-pill badge-success align-self-end">Completed</span></a></li>
+                    <li class="list-group-item order-card my-2"> <a href="/orderDetails.html"
+                            class="py-3 d-flex flex-column flex-sm-column flex-md-row justify-content-between align-items-center text-dark text-decoration-none"><span
+                                class="align-self-start font-weight-bold"><i
+                                    class="fas fa-chevron-circle-right mr-2"></i>#78476347932</span>
+                            <span>Legal Translation</span>
+                            <span>Arabic => German</span>
+                            <span>300 USD</span>
+                            <span>8/21/2019 11:53:36 AM</span>
+                            <span class=" badge badge-pill badge-success align-self-end">Completed</span></a></li>
+                    <li class="list-group-item order-card my-2"> <a href="/orderDetails.html"
+                            class="py-3 d-flex flex-column flex-sm-column flex-md-row justify-content-between align-items-center text-dark text-decoration-none"><span
+                                class="align-self-start font-weight-bold"><i
+                                    class="fas fa-chevron-circle-right mr-2"></i>#78476347932</span>
+                            <span>Legal Translation</span>
+                            <span>Arabic => German</span>
+                            <span>300 USD</span>
+                            <span>8/21/2019 11:53:36 AM</span>
+                            <span class=" badge badge-pill badge-success align-self-end">Completed</span></a></li>
                 </ul>
             </div>
         </div>
