--- a/Customer/multistepmode.html
+++ b/Customer/multistepmode.html
@@ -4,26 +4,26 @@
 <head>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-150975623-1"></script>
-    <script src="assets/js/gtag.js"></script>
+    <script src="../assets/js/gtag.js"></script>
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Ninjaz</title>
-    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../assets/css/bootstrap.min.css">
     <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"> -->
-    <link rel="stylesheet" href="assets/fontawesome-free-5.4.2-web/css/all.css">
-    <link rel="stylesheet" href="assets/css/owl.carousel.min.css">
-    <link rel="stylesheet" href="assets/css/owl.theme.default.min.css">
-    <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="../assets/fontawesome-free-5.4.2-web/css/all.css">
+    <link rel="stylesheet" href="../assets/css/owl.carousel.min.css">
+    <link rel="stylesheet" href="../assets/css/owl.theme.default.min.css">
+    <link rel="stylesheet" href="../assets/css/styles.css">
 </head>
 
 <body>
     <section class="section-navbar ">
         <!-- <h1>Navbar</h1> -->
         <nav class="navbar navbar-light navbar-expand-lg container py-3">
-            <a class="navbar-brand" href="/index.html">
-                <img src="/assets/images/logo.png" height="70" alt="">
+            <a class="navbar-brand" href="index.html">
+                <img src="../assets/images/logo.png" height="70" alt="">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"
                 aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
@@ -39,7 +39,7 @@
                         <a class="nav-link text-dark" href="#">Who we are</a>
                     </li>
                     <li class="nav-item mx-3">
-                        <a class="nav-link text-dark " href="/dashboad.html"><span
+                        <a class="nav-link text-dark " href="dashboad.html"><span
                                 class="nz-btn-gold py-0 my-2 px-2">Account</span></a>
                     </li>
                     <li class="nav-item mx-3">
@@ -47,14 +47,14 @@
                             <button class="btn btn-link dropdown-toggle text-uppercase text-dark" type="button"
                                 id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true"
                                 aria-expanded="false">
-                                <img src="assets/images/us.svg" width="30" class="mr-1" alt="">
+                                <img src="../assets/images/us.svg" width="30" class="mr-1" alt="">
                                 Eng
                             </button>
                             <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                                 <a class="dropdown-item text-uppercase text-dark" href="index_ar.html"><img
-                                        src="assets/images/sa.svg" width="30" class="mr-1" alt=""> Arabic</a>
+                                        src="../assets/images/sa.svg" width="30" class="mr-1" alt=""> Arabic</a>
                                 <a class="dropdown-item text-uppercase text-dark" href="#">
-                                    <img src="assets/images/es.svg" width="30" class="mr-1" alt="">
+                                    <img src="../assets/images/es.svg" width="30" class="mr-1" alt="">
                                     Spanish</a>
                             </div>
                         </div>
@@ -180,7 +180,7 @@
         <div class="container my-5">
             <div class="row  px-3">
                 <div class="col-12 col-md-12 col-lg-4 footer-links footer-img">
-                    <img src="assets/images/logo.png" alt="Ninjaz logo" class="img-fluid w-75">
+                    <img src="../assets/images/logo.png" alt="Ninjaz logo" class="img-fluid w-75">
                 </div>
                 <div class="col-12 col-md-6 col-lg-4 footer-links">
                     <ul>
@@ -205,11 +205,11 @@
         </div>
     </footer>
 
-    <script src="assets/js/jquery-3.3.1.slim.min.js"></script>
-    <script src="assets/js/popper.min.js"></script>
-    <script src="assets/js/bootstrap.min.js"></script>
-    <script src="assets/js/owl.carousel.min.js"></script>
-    <script src="assets/js/script.js"></script>
+    <script src="../assets/js/jquery-3.3.1.slim.min.js"></script>
+    <script src="../assets/js/popper.min.js"></script>
+    <script src="../assets/js/bootstrap.min.js"></script>
+    <script src="../assets/js/owl.carousel.min.js"></script>
+    <script src="../assets/js/script.js"></script>
 </body>
 
 </html>
