--- a/Customer/onestepmode.html
+++ b/Customer/onestepmode.html
@@ -4,26 +4,26 @@
 <head>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-150975623-1"></script>
-    <script src="assets/js/gtag.js"></script>
+    <script src="../assets/js/gtag.js"></script>
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Ninjaz</title>
-    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../assets/css/bootstrap.min.css">
     <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"> -->
-    <link rel="stylesheet" href="assets/fontawesome-free-5.4.2-web/css/all.css">
-    <link rel="stylesheet" href="assets/css/owl.carousel.min.css">
-    <link rel="stylesheet" href="assets/css/owl.theme.default.min.css">
-    <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="../assets/fontawesome-free-5.4.2-web/css/all.css">
+    <link rel="stylesheet" href="../assets/css/owl.carousel.min.css">
+    <link rel="stylesheet" href="../assets/css/owl.theme.default.min.css">
+    <link rel="stylesheet" href="../assets/css/styles.css">
 </head>
 
 <body>
     <section class="section-navbar ">
         <!-- <h1>Navbar</h1> -->
         <nav class="navbar navbar-light navbar-expand-lg container py-3">
-            <a class="navbar-brand" href="/index.html">
-                <img src="/assets/images/logo.png" height="70" alt="">
+            <a class="navbar-brand" href="index.html">
+                <img src="../assets/images/logo.png" height="70" alt="">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"
                 aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
@@ -39,7 +39,7 @@
                         <a class="nav-link text-dark" href="#">Who we are</a>
                     </li>
                     <li class="nav-item mx-3">
-                        <a class="nav-link text-dark " href="/dashboad.html"><span
+                        <a class="nav-link text-dark " href="singup.html"><span
                                 class="nz-btn-gold py-0 my-2 px-2">Account</span></a>
                     </li>
                     <li class="nav-item mx-3">
@@ -47,14 +47,14 @@
                             <button class="btn btn-link dropdown-toggle text-uppercase text-dark" type="button"
                                 id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true"
                                 aria-expanded="false">
-                                <img src="assets/images/us.svg" width="30" class="mr-1" alt="">
+                                <img src="../assets/images/us.svg" width="30" class="mr-1" alt="">
                                 Eng
                             </button>
                             <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                                 <a class="dropdown-item text-uppercase text-dark" href="index_ar.html"><img
-                                        src="assets/images/sa.svg" width="30" class="mr-1" alt=""> Arabic</a>
+                                        src="../assets/images/sa.svg" width="30" class="mr-1" alt=""> Arabic</a>
                                 <a class="dropdown-item text-uppercase text-dark" href="#">
-                                    <img src="assets/images/es.svg" width="30" class="mr-1" alt="">
+                                    <img src="../assets/images/es.svg" width="30" class="mr-1" alt="">
                                     Spanish</a>
                             </div>
                         </div>
@@ -64,7 +64,7 @@
     </section>
 
     <section class="section-main py-5 px-2">
-        <div class="row">
+        <div class="row px-3">
             <div class="side-navbar col-12 col-lg-2 flex-sm-row flex-md-row overflow-auto">
                 <div class="list-group flex-row flex-md-column " id="mainTabs" role="tablist">
                     <a href="dashboad.html" class="list-group-item text-center p-4 my-3 list-group-item-action">
@@ -94,35 +94,22 @@
                 </div>
             </div>
             <div class="col-12 col-lg-10 shadow py-3">
-                <h1 class="section-title-side"><span>Select Service Mode</span></h1>
-                <div class="row mb-5 card-deck">
-                    <div class="card rounded-lg">
-                        <div class="card-body pb-0">
-                            <h5 class="card-title font-weight-bold d-flex align-items-center"><i
-                                    class="fas fa-space-shuttle fa-3x mr-3"></i> Easy Mode</h5>
-                            <p class="card-text">Just pick your service, <span class="nz-pill-gold"> upload your
-                                    document and we will call </span> you later to complete the process </p>
-                        </div>
-                        <div class="card-footer bg-white border-0">
-                            <a href="/onestepmode.html" class="btn nz-btn-gold text-uppercase font-weight-bold">Start
-                                Now</a>
+                <h1 class="section-title-side"><span>Translation - <span class="font-weight-light">Easy
+                            Mode</span></h1>
+                <form>
+                    <div class="form-group">
+                        <div class="custom-file">
+                            <input type="file" class="custom-file-input" id="customFile">
+                            <label class="custom-file-label" for="customFile">Choose file</label>
                         </div>
                     </div>
-
-                    <div class="card rounded-lg">
-                        <div class="card-body pb-0">
-                            <h5 class="card-title font-weight-bold d-flex align-items-center"><i
-                                    class="fas fa-hat-wizard fa-3x mr-3"></i> Advanced Mode</h5>
-                            <p class="card-text">If you have time, Follow few simple steps to <span
-                                    class="nz-pill-gold">customize</span> you
-                                order</p>
-                        </div>
-                        <div class="card-footer bg-white border-0">
-                            <a href="/multistepmode.html" class="btn nz-btn-gold text-uppercase font-weight-bold">Start
-                                Now</a>
-                        </div>
+                    <div class="form-group">
+                        <label for="exampleFormControlTextarea1">Special Instructions </label>
+                        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
                     </div>
-                </div>
+                    <a href="placeOrderSuccess.html" class="btn nz-btn-gold text-uppercase font-weight-bold">Place
+                        Order</a>
+                </form>
 
             </div>
         </div>
@@ -131,9 +118,9 @@
     <footer class="section-footer pt-5">
         <!-- <h1>Footer</h1> -->
         <div class="container my-5">
-            <div class="row  px-3">
+            <div class="row">
                 <div class="col-12 col-md-12 col-lg-4 footer-links footer-img">
-                    <img src="assets/images/logo.png" alt="Ninjaz logo" class="img-fluid w-75">
+                    <img src="../assets/images/logo.png" alt="Ninjaz logo" class="img-fluid w-75">
                 </div>
                 <div class="col-12 col-md-6 col-lg-4 footer-links">
                     <ul>
@@ -158,11 +145,11 @@
         </div>
     </footer>
 
-    <script src="assets/js/jquery-3.3.1.slim.min.js"></script>
-    <script src="assets/js/popper.min.js"></script>
-    <script src="assets/js/bootstrap.min.js"></script>
-    <script src="assets/js/owl.carousel.min.js"></script>
-    <script src="assets/js/script.js"></script>
+    <script src="../assets/js/jquery-3.3.1.slim.min.js"></script>
+    <script src="../assets/js/popper.min.js"></script>
+    <script src="../assets/js/bootstrap.min.js"></script>
+    <script src="../assets/js/owl.carousel.min.js"></script>
+    <script src="../assets/js/script.js"></script>
 </body>
 
 </html>
