--- a/singup.html
+++ b/singup.html
@@ -119,7 +119,7 @@
                             </div>
                         </div>
                         <div class="form-row">
-                            <a href="dashboad.html"
+                            <a href="Customer/dashboad.html"
                                 class="btn btn-block nz-btn-gold btn-lg text-uppercase font-weight-normal">Register</a>
                         </div>
                     </form>
